# sidebundle

./: .gitignore  Cargo.toml  README.md  README.zh.md  event-tag.json
.github/workflows/: bwrap-static.yml  ci.yml  release.yml  smoke-test.yml
docs/: permissions.md  permissions_en.md  special_handling.md
scripts/: build-static-bwrap.sh  bwrap_smoke.sh  host_smoke.sh  verify-static-bwrap.sh
sidebundle-cli/: Cargo.toml
sidebundle-cli/src/: agent.rs  main.rs
sidebundle-closure/: Cargo.toml
sidebundle-closure/src/: image.rs  lib.rs  linker.rs  trace.rs  validator.rs
sidebundle-closure/src/trace/: agent.rs  linux.rs
sidebundle-core/: Cargo.toml
sidebundle-core/src/: lib.rs
sidebundle-launcher/: Cargo.toml  build.rs
sidebundle-launcher/src/: main.rs
sidebundle-packager/: Cargo.toml  build.rs
sidebundle-packager/src/: launcher.rs  launcher_template.rs  lib.rs  novdso_shim.c  shim.rs
sidebundle-shim/: Cargo.toml
sidebundle-shim/src/: lib.rs  main.rs
