[workspace]
members = [
    "sidebundle-cli",
    "sidebundle-core",
    "sidebundle-closure",
    "sidebundle-packager",
    "sidebundle-launcher",
    "sidebundle-shim",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.2.2"
authors = ["Sidecars Bundler Team"]
