[package]
name = "sidebundle-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sidebundle-core = { path = "../sidebundle-core" }
sidebundle-closure = { path = "../sidebundle-closure" }
sidebundle-packager = { path = "../sidebundle-packager" }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
tempfile = "3"
