[package]
name = "sidebundle-closure"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sidebundle-core = { path = "../sidebundle-core" }
log = "0.4"
thiserror = "1.0"
nix = { version = "0.29", default-features = false, features = ["process", "fs", "signal"] }
