[package]
name = "sidebundle-launcher"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
sidebundle-core = { path = "../sidebundle-core" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
sha2 = { version = "0.10", optional = true }

[features]
embedded-bwrap = ["dep:sha2"]

[dev-dependencies]
tempfile = "3.10"
