[package]
name = "sidebundle-packager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sidebundle-core = { path = "../sidebundle-core" }
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pathdiff = "0.2"
sha2 = "0.10"
nix = { version = "0.29", default-features = false, features = ["fs"] }
